# nyctereutes

./: README.md  nyctereutes.code-workspace
procyonoides/: CMakeLists.txt  readme.txt
procyonoides/src/: main.cpp
viverrinus/: CMakeLists.txt
viverrinus/src/: defines.h  game_types.h
viverrinus/src/core/: application.cpp  application.h  asserts.h  logger.cpp  logger.h
viverrinus/src/platform/: platform.h  platform_win.cpp
viverrinus/src/resources/: resource_types.h
viverrinus/src/resources/loaders/: fbx_loader.cpp  fbx_loader.h
